--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -4,6 +4,7 @@
       "files": [
         "../bower_components/jquery.scrollTo/jquery.scrollTo.js",
         "../bower_components/jquery.localScroll/jquery.localScroll.js",
+        "../bower_components/OwlCarousel/owl-carousel/owl.carousel.js",
         "scripts/contact-form.js",
         "scripts/main.js"
       ],
