--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-sass-official": "3.3.5",
     "normalize.css": "~3.0.3",
     "jquery.localScroll": "~1.4.0",
-    "jquery.scrollTo": "~2.1.1"
+    "jquery.scrollTo": "~2.1.1",
+    "OwlCarousel": "https://github.com/OwlFonk/OwlCarousel.git#~1.3.2"
   },
   "overrides": {
     "modernizr": {
@@ -23,9 +24,18 @@
     "jquery.localScroll": {
       "main": "./jquery.localScroll.js"
     },
+    "OwlCarousel": {
+      "main": [
+        "./owl-carousel/owl.carousel.css",
+        "./owl-carousel/owl.theme.css",
+        "./owl-carousel/owl.transitions.css",
+        "./owl-carousel/owl.carousel.js",
+        "./owl-carousel/grabbing.png",
+        "./owl-carousel/AjaxLoader.gif"        
+      ]
+    },
     "bootstrap-sass-official": {
       "main": [
-        "./assets/stylesheets/_bootstrap.scss",
         "./assets/javascripts/bootstrap/transition.js",
         "./assets/javascripts/bootstrap/alert.js",
         "./assets/javascripts/bootstrap/button.js",
